--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,27 +1,36 @@
 server:
-  port: 80 # 내장 톰캣 포트번호
+  port: 8081
 
 spring:
+  security:
   # H2 Database 설정
   datasource:
     driver-class-name: org.h2.Driver
-    url: 'jdbc:h2:tcp://localhost/~/jpashop'
+    url: 'jdbc:h2:tcp://localhost/~/artistry'
     username: sa
     password:
 
   # H2 Console 설정
   h2:
-    console: # H2 DB를 웹에서 관리할 수 있는 기능
-      enabled: true           # H2 Console 사용 여부
-      path: /h2-console       # H2 Console 접속 주소
+    console:
+      enabled: true
+      path: /h2-console
 
   # JPA 설정
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: create        # DB 초기화 전략 (none, create, create-drop, update, validate)
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
-        format_sql: true      # 쿼리 로그 포맷 (정렬)
-        show_sql: true        # 쿼리 로그 출력
+        format_sql: true
+        show_sql: true
+
+  # JMX 설정
+  jmx:
+    enabled: true
+    server:
+      port: 9091
+      ssl: false
+      authenticate: false
