--- a/src/main/reactfront/package.json
+++ b/src/main/reactfront/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/cli-platform-android": "^14.0.0",
     "@react-native-community/geolocation": "^3.3.0",
     "@react-navigation/native": "^6.0.2",
     "dom-serializer": "^1.4.0",
@@ -38,7 +39,7 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-input-search-bar": "^0.0.8",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-maps": "1.14.0",
+    "react-native-maps": "^1.17.3",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.2.0",
     "react-native-reanimated": "~3.10.1",
