--- a/src/main/reactfront/package.json
+++ b/src/main/reactfront/package.json
@@ -16,8 +16,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/cli-platform-android": "^14.0.0",
     "@react-native-community/geolocation": "^3.3.0",
+    "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.0.2",
     "dom-serializer": "^1.4.0",
     "domutils": "^1.7.0",
@@ -26,17 +28,23 @@
     "expo-font": "~12.0.9",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.1",
     "expo-router": "~3.5.20",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-picker": "^7.1.2",
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-image-zoom": "^0.32.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-input-search-bar": "^0.0.8",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.17.3",
@@ -51,6 +59,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
