--- a/src/main/reactfront/package.json
+++ b/src/main/reactfront/package.json
@@ -16,6 +16,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
@@ -43,10 +44,12 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-pager-view": "^6.3.3",
     "react-native-paper": "^5.12.5",
+    "react-native-quick-actions": "^0.3.13",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-shadow": "^1.2.2",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.10"
   },
