--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:10.1.26'
 
 
+}
+
+
+tasks.withType(JavaCompile).configureEach {
+	options.compilerArgs << "-parameters"
 }
 
 
@@ -58,7 +64,7 @@ sourceSets {
 
 processResources { dependsOn "copyReactBuildFiles" }
 
-task installReact(type: Exec) {
+tasks.register('installReact', Exec) {
 	workingDir "$frontendDir"
 	inputs.dir "$frontendDir"
 	group = BasePlugin.BUILD_GROUP
@@ -71,7 +77,7 @@ task installReact(type: Exec) {
 	}
 }
 
-task buildReact(type: Exec) {
+tasks.register('buildReact', Exec) {
 	dependsOn "installReact"
 	workingDir "$frontendDir"
 	inputs.dir "$frontendDir"
@@ -83,7 +89,7 @@ task buildReact(type: Exec) {
 	}
 }
 
-task copyReactBuildFiles(type: Copy) {
+tasks.register('copyReactBuildFiles', Copy) {
 	dependsOn "buildReact"
 	from "$frontendDir/build"
 	into "$projectDir/src/main/resources/static"
