--- a/src/main/reactfront/package.json
+++ b/src/main/reactfront/package.json
@@ -20,7 +20,9 @@
     "@react-native-community/cli-platform-android": "^14.0.0",
     "@react-native-community/geolocation": "^3.3.0",
     "@react-native-picker/picker": "^2.7.7",
+    "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.0.2",
+    "date-fns": "^3.6.0",
     "dom-serializer": "^1.4.0",
     "domutils": "^1.7.0",
     "expo": "~51.0.24",
@@ -38,6 +40,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
@@ -53,6 +56,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
