--- a/src/main/reactfront/package.json
+++ b/src/main/reactfront/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@flyerhq/react-native-link-preview": "^1.6.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/cli-platform-android": "^14.0.0",
     "@react-native-community/geolocation": "^3.3.0",
@@ -43,6 +44,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-picker": "^7.1.2",
     "react-native-image-viewing": "^0.2.2",
