--- a/src/main/reactfront/package.json
+++ b/src/main/reactfront/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@alessiocancian/react-native-actionsheet": "^3.2.0",
     "@expo/vector-icons": "^14.0.2",
     "@flyerhq/react-native-link-preview": "^1.6.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
@@ -59,7 +60,9 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-web": "~0.19.10"
+    "react-native-uuid": "^2.0.2",
+    "react-native-web": "~0.19.10",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
