--- a/src/main/reactfront/package.json
+++ b/src/main/reactfront/package.json
@@ -21,6 +21,8 @@
     "@react-native-community/geolocation": "^3.3.0",
     "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.7.3",
+    "cors": "^2.8.5",
     "dom-serializer": "^1.4.0",
     "domutils": "^1.7.0",
     "expo": "~51.0.24",
@@ -34,6 +36,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "express": "^4.19.2",
     "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
